fix text-align problem

--- a/app/tasks/part/[slug]/[problem]/page.module.css
+++ b/app/tasks/part/[slug]/[problem]/page.module.css
@@ -8,6 +8,8 @@
   flex-direction: column;
   align-items: center;
 
+  text-align: justify;
+
   padding: 30px 20px;
 }
 
